gitops/clusters/apse2/local/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress-no-auth
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.opswork.io.vn
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.platform.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://prometheus.opswork.io.vn/oauth2/start"

spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.opswork.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
